# oxbow-rust-lambda

./: .gitignore  .justfile  Cargo.toml  README.adoc  README_pinnacle.md  polar_read.py
deployment/: shared.tf  simple.tf
lambdas/oxbow/: Cargo.toml
lambdas/oxbow/src/: main.rs
local_add_file/: Cargo.toml  main.rs
