[package]
name = "local-add"
version = "0.1.0"
edition = "2021"

[dependencies]
deltalake = { version = "0.17.3", features = ["datafusion"] }
deltalake-aws = { version = "0.1.1" }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }

[[bin]]
name = "local-add"
path = "./main.rs"
